--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": { "no-console": "off",
+      "no-unused-vars":"off",
+      "no-debugger": "off"}
   },
   "browserslist": [
     "> 1%",
