--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 NODE_ENV=development
-VUE_APP_URL=http://localhost/
+VUE_APP_URL=https://console-mock.apipost.cn/app/mock/project/51fba2af-7537-4c56-8c1a-622284ab2907
