--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bufferutil": "^4.0.6",
     "core-js": "^3.22.7",
     "element-plus": "^2.2.2",
+    "element-ui": "^2.15.9",
     "fibers": "^5.0.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
@@ -49,9 +50,11 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": { "no-console": "off",
-      "no-unused-vars":"off",
-      "no-debugger": "off"}
+    "rules": {
+      "no-console": "off",
+      "no-unused-vars": "off",
+      "no-debugger": "off"
+    }
   },
   "browserslist": [
     "> 1%",
